--- a/style/styles.css
+++ b/style/styles.css
@@ -179,19 +179,23 @@ header::before {
 #top-characters {
   height: 100%;
   background-color: var(--character-top-image-color);
-  mask: var(--character-top-image-src) bottom / 100% no-repeat;
+  bottom: -3px;
+
+  mask: var(--character-top-image-src) bottom / contain no-repeat;
   -webkit-mask: var(--character-top-image-src) bottom / 100% no-repeat;
 }
 
 #bottom-characters {
   height: 500px;
-  background-color:#d3d3d3;
+  background-color: var(--character-bottom-image-color);
   top: 3px;
   transform: rotateZ(180deg) scaleX(-1);
   position: relative;
-  mask: var(--character-bottom-image-src) bottom / 100% no-repeat;
+
+  mask: var(--character-bottom-image-src) bottom / contain no-repeat;
   -webkit-mask: var(--character-bottom-image-src) bottom / 100% no-repeat;
 }
+
 
 /***  main style ***/
 
